--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#File c?u hinh c?a các thu?c tính c?n dùng
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/nhasach
+spring.datasource.username=root
+spring.datasource.password=Huy2004@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
 
+#config spring security
+spring.security.user.name=hoidanit
+spring.security.user.password=123456
+
+##config view engine (jsp)
+#spring.mvc.view.prefix = /WEB-INF/view/
+## t? ??ng thêm h?u t? (.jsp) cho tên file
+#spring.mvc.view.suffix = .jsp
+# Khi ?ã có folder config riêng thì không c?n ph?i làm theo cách này
