--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ spring.jpa.show-sql: true
 spring.security.user.name=hoidanit
 spring.security.user.password=123456
 
+#default = 1MB
+spring.servlet.multipart.max-file-size=50MB
+#default = 10 MB (form data)
+spring.servlet.multipart.max-request-size=50MB
+
 ##config view engine (jsp)
 #spring.mvc.view.prefix = /WEB-INF/view/
 ## t? ??ng thêm h?u t? (.jsp) cho tên file
