--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,11 @@ spring.servlet.multipart.max-file-size=50MB
 #default = 10 MB (form data)
 spring.servlet.multipart.max-request-size=50MB
 
+#config session
+spring.session.store-type=jdbc
+spring.session.timeout=30m
+spring.session.jdbc.initialize-schema=always
+
 ##config view engine (jsp)
 #spring.mvc.view.prefix = /WEB-INF/view/
 ## t? ??ng thêm h?u t? (.jsp) cho tên file
